array.island.Island.scala.error
Compilation error:
Island:4: error: identifier expected but integer literal found.
  var y:Int = num[0]
                  ^Island:5: error: ']' expected but ';' found.
  for (k <- num){
^