array.island.Island.scala.code
def island(num:Array[Int]): Int = {
 	var x:Int = 0
  var y:Int = num[0]
  for (k <- num){
    if (k>y){
      x=x+1
    }
    y=k
  }
  return x
}